Modification config par défaut

--- a/samples/config.json
+++ b/samples/config.json
@@ -1,6 +1,7 @@
 {
   "raceName": "Univercity Trail 2020",
   "tickStep": 60,
+  "timeCheckpoints": [],
   "stages": [
     {
       "name": "Campus de Villejean",
