--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,32 @@
 aiohttp==3.6.2
-gpxpy==1.3.5
-haversine==2.1.2
-jsonschema==3.1.1
-requests==2.22.0
+async-timeout==3.0.1
+attrs==19.3.0
+chardet==3.0.4
+click==7.1.1
+dnspython==1.16.0
+eventlet==0.25.1
+Flask==1.1.2
+Flask-SocketIO==4.2.1
+gpxpy==1.4.0
+greenlet==0.4.15
+haversine==2.2.0
+idna==2.9
+idna-ssl==1.1.0
+importlib-metadata==1.6.0
+itsdangerous==1.1.0
+Jinja2==2.11.1
+jsonschema==3.2.0
+MarkupSafe==1.1.1
+monotonic==1.5
+multidict==4.7.5
+pkg-resources==0.0.0
+pyrsistent==0.16.0
+python-engineio==3.12.1
+python-socketio==4.5.1
+redis==3.4.1
+six==1.14.0
+typing-extensions==3.7.4.2
 websockets==8.1
+Werkzeug==1.0.1
+yarl==1.4.2
+zipp==3.1.0
