Envoi du tickStep lorsque le statut de la course change

--- a/doc/events/race_setup_event.yml
+++ b/doc/events/race_setup_event.yml
@@ -76,3 +76,6 @@ payload:
                     type: Array
                     items:
                         type: Integer
+
+    tickStep: Nombre de secondes simulées pour une seconde réelle
+        type: Integer
