--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ attrs==19.3.0
 chardet==3.0.4
 click==7.1.1
 dnspython==1.16.0
+entrypoints==0.3
 eventlet==0.25.1
+flake8==3.7.9
 Flask==1.1.2
 Flask-SocketIO==4.2.1
 gpxpy==1.4.0
@@ -16,14 +18,27 @@ importlib-metadata==1.6.0
 itsdangerous==1.1.0
 Jinja2==2.11.1
 jsonschema==3.2.0
+lxml==4.5.0
 MarkupSafe==1.1.1
+mccabe==0.6.1
 monotonic==1.5
+more-itertools==8.2.0
 multidict==4.7.5
+packaging==20.3
+pkg-resources==0.0.0
+pluggy==0.13.1
+py==1.8.1
+pycodestyle==2.5.0
+pyflakes==2.1.1
+pyparsing==2.4.7
 pyrsistent==0.16.0
+pytest==5.4.1
 python-engineio==3.12.1
 python-socketio==4.5.1
+rope==0.16.0
 six==1.14.0
 typing-extensions==3.7.4.2
+wcwidth==0.1.9
 websockets==8.1
 Werkzeug==1.0.1
 yarl==1.4.2
